[package]
name = "ygramul"
description = "Hierarchical knowledge graph for PIGEAN results"
version = "0.0.1"
edition = "2024"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/ygramul"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.32", features = ["cargo"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
home = "0.5.11"
log = "0.4.26"
simplelog = "0.12.2"
neo4rs = "0.8.0"
tokio = { version = "1.44.1", features = ["rt"] }
humantime = "2.2.0"
