[package]
name = "ygramul"
description = "Hierarchical knowledge graph for PIGEAN results"
version = "0.0.1"
edition = "2024"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/ygramul"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.42", features = ["cargo"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.4"
home = "0.5.11"
log = "0.4.27"
simplelog = "0.12.2"
neo4rs = "0.8.0"
tokio = { version = "1.47.0", features = ["rt"] }
humantime = "2.2.0"
aws-config = "1.8.3"
aws-sdk-s3 = "1.100.0"
csv = "1.3.1"